--- a/youraccount.html
+++ b/youraccount.html
@@ -14,8 +14,8 @@
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <!--//fonts-->
-    <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/xeditable.min.js"></script>
     <script type="text/javascript" src="js/firebase.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
@@ -24,8 +24,14 @@
     <script type="text/javascript" src="js/directives.js"></script>
     <script type="text/javascript" src="js/components.js"></script>
     <script type="text/javascript" src="js/jquery.flexisel.js"></script>
+    <!--Add thu vien-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="js/jquery.etalage.min.js"></script>
     <script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
+    <script type="text/javascript" src="js/ng-infinite-scroll.min.js"></script>
+    <script type="text/javascript" src="js/dirPagination.js"></script>
 </head>
 <body ng-controller="AccountController">
 <!--header-->
@@ -36,25 +42,67 @@
         <div id="profile-resume">
             <div class="profile-avatar">
                 <image-picker></image-picker>
-                <img class="avatar" width="240px" height="240px" ng-src="{{urlImg}}" />
+                <img class="avatar" width="240px" height="240px" ng-src="{{ dataUser.avatar }}" />
             </div>
             <div class="profile-info">
                 <ul class="profile-info-content">
+                    <!-- THAY ĐỔI -->
+                    <a class="now-get get-cart-in" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-pencil size"></span></a>
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+                            <!-- MODAL -->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">THAY ĐỔI THÔNG TIN</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <table style="font-family: 'Helvetica Neue';font-size: 20px" name="cartProductForm">
+                                        <tr>
+                                            <td width="150px" height="70px"><span>First Name</span></td>
+                                            <td><input type="text" required ng-model="dataUser.first_name"/></td>
+                                        </tr>
+                                        <tr>
+                                            <td width="150px" height="70px"><span>Last Name</span></td>
+                                            <td><input type="text" required ng-model="dataUser.last_name"/></td>
+                                        </tr>
+                                        <tr>
+                                            <td width="150px" height="70px"><span>Phone</span></td>
+                                            <td><input type="text" required ng-model="dataUser.phone"/></td>
+                                        </tr>
+                                        <tr>
+                                            <td width="150px" height="70px"><span>Email</span></td>
+                                            <td><input type="text" required ng-model="dataUser.email"/></td>
+                                        </tr>
+                                        <tr>
+                                            <td width="150px" height="70px"><span>Address</span></td>
+                                            <td><input type="text" required ng-model="dataUser.address"/></td>
+                                        </tr>
+
+                                    </table>
+                                    <div class="modal-footer">
+                                        <button ng-click="saveUpdateInfo()" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <h3 class="restyle" editable-text="dataUser.first_name"><b>{{ dataUser.first_name }}</b></h3>
                     <h3 class="restyle" editable-text="dataUser.last_name"><b>{{ dataUser.last_name }}</b></h3>
                     <table>
                         <tbody>
                         <tr>
                             <td class="alignTable">Phone</td>
-                            <td><span editable-text="dataUser.phone">{{ dataUser.phone }}</span></td>
+                            <td><span ><h4 style="margin-left: 50px;">{{ dataUser.phone }}</h4></span></td>
                         </tr>
                         <tr>
                             <td class="alignTable" >Email</td>
-                            <td><span editable-text="dataUser.email">{{ dataUser.email }}</span></td>
+                            <td><span ><h4 style="margin-left: 50px;">{{ dataUser.email }}</h4></span></td>
                         </tr>
                         <tr>
-                            <td class="alignTable" >Education</td>
-                            <td><span editable-text="dataUser.address">{{ dataUser.address }}</span></td>
+                            <td class="alignTable" >Address</td>
+                            <td><span ><h4 style="margin-left: 50px;">{{ dataUser.address }}</h4></span></td>
                         </tr>
                         </tbody>
                     </table>
