--- a/cart.html
+++ b/cart.html
@@ -64,20 +64,24 @@
                                 <div class="modal-body">
                                     <form style="font-family: 'Helvetica Neue';font-size: 20px" name="cartProductForm">
                                         <tr>
-                                            <td width="20px"><span>Số lượng</span></td>
-                                            <td><input type="number" id="number" value="1" style="width: 100px" ng-model="cart.quantity" min="1" max="1000" required/></td>
-                                        </tr>
+                                            <div style="float: left; width: 100px; height: 30px">
+                                                <td width="20px"><span>Số lượng</span></td>
+                                            </div>
+                                            <td  style="margin-left: 25px;"><input type="number" id="number" value="1" style="width: 100px" ng-model="cart.quantity" min="1" max="1000" required/></td>
+                                        </tr><div style="margin: 25px"></div>
                                         <tr>
-                                            <td><span>Size</span></td>
-                                            <td height="60px">
+                                            <div style="float: left; width: 100px; height: 30px">
+                                                <td><span>Size</span></td>
+                                            </div>
+                                            <td  style="margin-left: 25px;">
                                                 <input ng-model="cart.size" type="text" id="sizeProduct" ng-model="sizeProduct" style="width: 100px" required/>
                                             </td>
-                                        </tr>
-                                        <div style="float: right">
+                                        </tr><div style="margin: 25px"></div>
+                                        <div style="float: left; margin: 20px">
                                             <span>Thành tiền {{ cart.product.cost * cart.quantity | currency }}</span>
                                         </div>
                                         <div class="modal-footer">
-                                            <button ng-click="saveUpdateProduct(cart.$id, cart.size, cart.quantity)" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>
+                                            <button style="padding: 20px; background-color: #00BFF0; font-size: 20px; color: #d9edf7; border: none" ng-click="saveUpdateProduct(cart.$id, cart.size, cart.quantity)" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>
                                         </div>
                                     </form>
                                 </div>
