--- a/youraccount.html
+++ b/youraccount.html
@@ -59,31 +59,32 @@
                                     <h4 class="modal-title">THAY ĐỔI THÔNG TIN</h4>
                                 </div>
                                 <div class="modal-body">
-                                    <form style="font-family: 'Helvetica Neue';font-size: 20px" name="cartProductForm">
+                                    <table style="font-family: 'Helvetica Neue';font-size: 20px" name="cartProductForm">
                                         <tr>
-                                            <td width="20px"><span>First Name</span></td>
+                                            <td width="150px" height="70px"><span>First Name</span></td>
                                             <td><input type="text" required ng-model="dataUser.first_name"/></td>
                                         </tr>
                                         <tr>
-                                            <td width="20px"><span>Last Name</span></td>
+                                            <td width="150px" height="70px"><span>Last Name</span></td>
                                             <td><input type="text" required ng-model="dataUser.last_name"/></td>
                                         </tr>
                                         <tr>
-                                            <td width="20px"><span>Phone</span></td>
+                                            <td width="150px" height="70px"><span>Phone</span></td>
                                             <td><input type="text" required ng-model="dataUser.phone"/></td>
                                         </tr>
                                         <tr>
-                                            <td width="20px"><span>Email</span></td>
+                                            <td width="150px" height="70px"><span>Email</span></td>
                                             <td><input type="text" required ng-model="dataUser.email"/></td>
                                         </tr>
                                         <tr>
-                                            <td width="20px"><span>Address</span></td>
+                                            <td width="150px" height="70px"><span>Address</span></td>
                                             <td><input type="text" required ng-model="dataUser.address"/></td>
                                         </tr>
-                                        <div class="modal-footer">
-                                            <button ng-click="saveUpdateInfo()" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>
-                                        </div>
-                                    </form>
+
+                                    </table>
+                                    <div class="modal-footer">
+                                        <button ng-click="saveUpdateInfo()" type="submit" class="btn btn-default" data-dismiss="modal">Save</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
